tests/transpiler/x/scala/min_max_builtin.error
exit status 1
/workspace/mochi/tests/transpiler/x/scala/min_max_builtin.scala:5: warning: non-variable type argument Int in type pattern List[Int] (the underlying of List[Int]) is unchecked since it is eliminated by erasure
        case xs: List[Int] => println(xs.mkString(" ") )
                 ^
/workspace/mochi/tests/transpiler/x/scala/min_max_builtin.scala:11: error: not found: value min
        mochiPrint(min(nums))
                   ^
/workspace/mochi/tests/transpiler/x/scala/min_max_builtin.scala:12: error: not found: value max
        mochiPrint(max(nums))
                   ^
one warning found
two errors found
